--- a/Pizza Website/feedback.html
+++ b/Pizza Website/feedback.html
@@ -24,31 +24,59 @@
 
         <div class="mittig">
             <form>
-                <label for="frage1">How did you like our Pizza?----</label>
-                <label for="a1">awesome </label>
-                <input type="radio" id="a1" name="a" value="awesome">
-                <label for="a2">good</label>
-                <input type="radio" id="a2" name="a" value="good">
-                <label for="a3">okey</label>
-                <input type="radio" id="a3" name="a" value="okey">
-                <label for="a4">poor</label>
-                <input type="radio" id="a4" name="a" value="poor"> <br> <br><br>
 
-                <label for="frage2">what do you think about our prize?----s</label>
-                <label for="a12">fair </label>
-                <input type="radio" id="a12" name="a1" value="fair">
-                <label for="a13">okey </label>
-                <input type="radio" id="a13" name="a1" value="okey">
-                <label for="a14">expensive </label>
-                <input type="radio" id="a14" name="a1" value="expensive"><br><br><br>
+                <div class="warenkorb">
+                    <div class="margin">
+                        <label for="frage1">How did you like our Pizza?</label>
+                    </div>
+                    <div class="warenkorb">
+                        <label for="a1">awesome </label>
+                        <input type="radio" name="a" value="awesome">
+                        <label for="a2">good</label>
+                        <input type="radio" name="a" value="good">
+                        <label for="a3">okey</label>
+                        <input type="radio" name="a" value="okey">
+                        <label for="a4">poor</label>
+                        <input type="radio" name="a" value="poor">
+                    </div>
+                </div>
+                <br><br>
 
-                <label for="frage3">your name?</label>
-                <input type="text" id="frage3" name="frage3" value=""> <br> <br> <br>
-                <label for="frage4">your email?</label>
-                <input type="email" id="frage4" name="frage4" value=""> <br><br><br>
-                <label for="frage5">what can we do better?</label>
-                <textarea name="frage5" id="frage5" cols="30" rows="10"></textarea>
-                <button>send</button>
+                <div class="warenkorb">
+                    <label for="frage2">what do you think about our prize?</label>
+                    <div class="warenkorb">
+                        <label for="a12">fair</label>
+                        <input type="radio" name="a1" value="fair">
+                        <label for="a13">okey</label>
+                        <input type="radio" name="a1" value="okey">
+                        <label for="a14">expensive</label>
+                        <input type="radio" name="a1" value="expensive">
+                    </div>
+                </div>
+                <br><br>
+
+                <div class="rechtsbündig1">
+                    <label for="frage3">your name?</label>
+                    <input type="text" name="frage3" value="">
+                </div>
+                <br><br>
+
+                <div class="rechtsbündig1">
+                    <label for="frage4">your email?</label>
+                    <input type="email" name="frage4" value="">
+                </div>
+                <br><br>
+
+                <div class="rechtsbündig1">
+                    <label for="frage5">What can we do better?</label>
+                    <textarea name="frage5" cols="20" rows="7"></textarea>
+                </div>
+
+                <br>
+
+                <div class="rechtsbündig">
+                    <button>send</button>
+                </div>
             </form>
 
         </div>
