--- a/Pizza_Website/salad.html
+++ b/Pizza_Website/salad.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Tony's Pizza Factory</title>
@@ -15,26 +15,15 @@
             <a href="salad.html">Salad</a>
             <a href="soft_drinks.html">Soft Drinks</a>
             <a href="feedback.html">Feedback</a>
+            <button onclick="reset1()" type="button"><a href="bestellung.html"><img src="../Bilder_Pizza/Warenkorb.png" alt="Warenkorb" width="20"></a></button>
+            <a id = "counter"></a>
+            <button onclick="reset()" type="button">reset</button> <br>
         </nav>
     </header>
 
-    <h1 class="mittig">Welcome to Tonys Pizza Factory</h1>
-    <div class="mittig">
-        <img src="../Bilder Pizza/tony's pizza.jpg" alt="pizza" height="400" width="500">
+    <h1>Salad</h1>
 
-    </div>
-    <br>
-    <div class="abstand">
-
-        <a href="pizza.html">
-            <img src="../Bilder Pizza/Download (1).jfif" alt="Pizza" height="200" width="300">
-        </a>
-        <a href="salad.html">
-            <img src="../Bilder Pizza/Download (2).jfif" alt="Salat" height="200" width="300">
-        </a>
-        <a href="soft_drinks.html">
-            <img src="../Bilder Pizza/Download (3).jfif" alt="Trinken" height="200" width="300">
-        </a>
+    <div class="pizzamenu" id="saladContainer">
 
     </div>
 
@@ -58,6 +47,8 @@
             Chicago, IL 60614, USA
         </p>
     </footer>
+    <script src="salad.js"></script>
+    <script src="alles.js"></script>
 </body>
 
 </html>
