--- a/Yanek/Yanek.html
+++ b/Yanek/Yanek.html
@@ -4,9 +4,7 @@
 <head>
     <title>Yanek Rebsamen</title>
     <link rel="Stylesheet" href="yanek.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="index.js"></script>
 </head>
 <div class="text">
 <body>
